--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       name="viewport"
       content="minimum-scale=1,initial-scale=1,width=device-width"
     />
-    <meta name="description" content="Vite Preact Tailwind AI template." />
-    <title>Vite Preact Tailwind AI template</title>
+    <meta name="description" content="Vite React Tailwind AI template." />
+    <title>Vite React Tailwind AI template</title>
   </head>
   <body class="flex min-h-screen min-w-80 place-items-center bg-gray-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
