--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite-preact-tailwind-ai-template/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/vite-react-tailwind-ai-template/vite.svg"
+    />
     <meta
       name="viewport"
       content="minimum-scale=1,initial-scale=1,width=device-width"
     />
-    <meta name="description" content="Vite Preact Tailwind AI template." />
-    <title>Vite Preact Tailwind AI template</title>
+    <meta name="description" content="Vite React Tailwind AI template." />
+    <title>Vite React Tailwind AI template</title>
     <style>
       html,
       body,
@@ -26,6 +30,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://vite-preact-tailwind-ai-template.pages.dev"></iframe>
+    <iframe src="https://vite-react-tailwind-ai-template.pages.dev"></iframe>
   </body>
 </html>
